fix: notification spacing

--- a/styles/notifications.css
+++ b/styles/notifications.css
@@ -172,7 +172,7 @@
 .notification {
     position: relative;
     width: 85%;
-    margin: 12.5px auto 12.5px auto;
+    margin: 5px auto;
     background-color: var(--light-gray);
     padding: 20px;
     border-radius: 20px;
